# nr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo.tape  install.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/: README.md
examples/demo-project/: package.json
scoop/: nr.json
scripts/: generate-demo.sh
src/: app.rs  fuzzy.rs  lib.rs  main.rs  sort.rs
src/core/: env_files.rs  mod.rs  package_json.rs  package_manager.rs  project_root.rs  runner.rs  scripts.rs  workspaces.rs
src/store/: args_history.rs  config_path.rs  favorites.rs  global_env.rs  mod.rs  project_id.rs  recents.rs  script_configs.rs
src/ui/: args_input.rs  env_selector.rs  execution_confirm.rs  header_bar.rs  mod.rs  package_list.rs  script_list.rs  search_input.rs  status_bar.rs  tabs.rs
tests/: app_integration.rs  configure_flow_integration.rs  env_args_integration.rs
