[package]
name = "nr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "TUI-based npm script runner with fuzzy search"
license = "MIT"
repository = "https://github.com/juicyjusung/nr"
homepage = "https://github.com/juicyjusung/nr"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
crossterm = "0.29"
nucleo-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.9"
indexmap = { version = "2", features = ["serde"] }
dirs = "6"
globset = "0.4"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/nr-v{ version }-{ target-triple }.{ archive-format }"
bin-dir = "nr-v{ version }-{ target-triple }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
